// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el <GifGrid /> Debe mostrarse correctamente el componente 1`] = `
<Fragment>
  <p>
    LOADING...
  </p>
  <h2>
    Ironman
  </h2>
  <div
    className="cards"
  />
</Fragment>
`;

exports[`Pruebas en el <GifGrid /> debe mostrar items cuando useFetchGifs carge  1`] = `
<Fragment>
  <h2>
    Ironman
  </h2>
  <div
    className="cards"
  >
    <GifItem
      id=""
      key=""
      title=""
      url=""
    />
  </div>
</Fragment>
`;
